--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
   </div>
   <div class="button-group">
     <p><b>Pulsa para cambiar el tamaño de la letra.</b></p>
-    <button id="fontDecrease" accesskey="s">Disminuir (S)</button>
-    <button id="fontIncrease" accesskey="d">Aumentar (D)</button>
+    <button id="fontDecrease" accesskey="s">Disminuir (D)</button>
+    <button id="fontIncrease" accesskey="d">Aumentar (F)</button>
   </div>
   <div class="button-group">
     <p><b>Pulsa para subrayar los enlaces.</b></p>
-    <button id="highlightLinks" accesskey="h">Subrayar enlaces (H)</button>
+    <button id="highlightLinks" accesskey="h">Subrayar enlaces (S)</button>
   </div>
 
   <div class="button-group">
     <p><b>Pulsa para reiniciar o eliminar los estilos.</b></p>
-    <button id="reset" accesskey="f">Reset (F)</button>
-    <button id="remove" accesskey="g">Remove (G)</button>
+    <button id="reset" accesskey="f">Reiniciar (R)</button>
+    <button id="remove" accesskey="g">Eliminar (E)</button>
   </div>
   <div class="contrastTextChange button-group">
     <p><b>Cambia el contraste del texto.</b></p>
@@ -71,8 +71,8 @@
   </div>
   <div class="contrastBgArticleChange button-group">
     <p><b>Cambia el contraste del artículo.</b></p>
-    <button id="contrastBgArticleLighten" onclick="lightenArticle();" accesskey="k">Iluminar (K)</button>
-    <button id="contrastBgArticleDarken" onclick="darkenArticle();" accesskey="l">Oscurecer (L)</button>
+    <button id="contrastBgArticleLighten" onclick="lightenArticle();" accesskey="k">Iluminar (B)</button>
+    <button id="contrastBgArticleDarken" onclick="darkenArticle();" accesskey="l">Oscurecer (N)</button>
   </div>
   <div class="rangeSliders">
     <p>Rojo:</p> <input id="rangeArticle1" class="rangeArticleBg" type="range" min="0" max="255" value="255">
@@ -234,7 +234,7 @@
 
 </body>
 <footer>
-  <h1>Hola</h1>
+  <h1>Footer de Xexu. Un footer con algunos links accesibles a la web del museo </h1>
 </footer>
 
 </html>
