Cita con estilos

--- a/index.html
+++ b/index.html
@@ -87,8 +87,16 @@
   <div id="content-wrapper">
     <h1 class="title">Museo del prado</h1>
     <blockquote cite="https://akifrases.com/frase/195934#:~:text=Frase%20de%20Orhan%20Pamuk,tiempo%20se%20transforma%20en%20espacio.%E2%80%9D&text=%E2%80%9CEl%20amor%20es%20el%20anhelo,el%20mismo%20lugar%20que%20ella.&text=Biografia%3A%20Ferit%20Orhan%20Pamuk%20es,Premio%20Nobel%20de%20Literatura%202006.">
-      <p>“Los museos de verdad son los sitios en los que el tiempo se transforma en espacio.”</p>
-      <p><b>― Orhan Pamuk</b></p>
+      <div id="cita">
+        <div id="imagecita">
+          <img src="img/pamuk.jpg" alt="pamuk">
+        </div>
+        <div id="textcita">
+          <p>“Los museos de verdad son los sitios en los que el tiempo se transforma en espacio.”</p>
+          <p><b>― Orhan Pamuk</b></p>
+        </div>
+        
+    </div>
     </blockquote>
     <img src="img/home.jpg" alt="Museo del Prado">
 
