pagina de exposiciones y about us

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
     <h1 id="menu" class="center">Menu</h1>
     <nav>
       <ul class="menu">
+        <li><a title="Accede a las posibles exposiciones" href="index.html"><b>Home</b></a></li>
+        <li><a title="Accede a las posibles exposiciones" href="exposiciones.html"><b>Exposiciones</b></a></li>
+        <li><a title="Accede a la pagina de contacto con la empresa" href="aboutUs.html"><b>Sobre Nosotros</b></a></li>
         <li><a title="Accede a la presentación" href="#presentacion"><b>1.Ir a Presentación</b></a></li>
         <li><a title="Accede al horario" href="#horario"><b>2.Ir a Horario</b></a></li>
         <li><a title="Accede a la lista de precios" href="#precios"><b>3.Ir a Precios</b></a></li>
@@ -115,6 +118,7 @@
     <!--content-->
     <div id="presentacion">
       <h2 class="center"><span>1. </span>Presentación</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6-d2uEjlU-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Video del prado</iframe>
         <p>Beth received 1<sup>st</sup> place in the 9<sup>th</sup> grade science competition.</p>
         <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
     </div>
