Cambios de formato

--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                 <div id="cita">
                     <div id="imagecita">
                         <img src="img/pamuk.jpg" alt="pamuk">
-                    </div>
+                        <div>
+                            <p>Foto de Orhan Pamuk</p>
+                        </div>
+                    </div>   
                     <div id="textcita">
                         <p>“Los museos de verdad son los sitios en los que el tiempo se transforma en espacio.”</p>
                         <p><b>― Orhan Pamuk</b></p>
@@ -123,7 +126,12 @@
 
                 </div>
             </blockquote>
+            <div>
             <img src="img/home.jpg" alt="Museo del Prado">
+                <div>
+                    <p>Foto del Museo del Prado 2021. Madrid-España</p>
+                </div>
+            </div>
             <p>A continuación, tiene un video que describirá cómo es el museo del prado y qué te puedes encontrar.</p>
             <div class="frame-contenedor">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6-d2uEjlU-c" title="Video presentación del Museo del Prado" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Video del prado</iframe>
