galeria pasiones mitologicas

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <!--navigation-->
-        <h1 id="menu" class="center">Menu</h1>
+        <h1 id="menu" class="center">Menú</h1>
         <nav>
             <ul class="menu">
                 <li><a title="Accede a la presentación" href="#presentacion"><b>1.Ir a Presentación</b></a></li>
