--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
             </div>
         </div>
         <!--navigation-->
-        <h1 id="menu" class="center">Menú</h1>
+        <h2 class="center">Menú - Inicio</h2>
         <nav>
             <ul class="menu">
                 <li><a title="Accede a la presentación" href="#presentacion"><b>1.Ir a Presentación</b></a></li>
                 <li><a title="Accede al horario" href="#horario"><b>2.Ir a Horario</b></a></li>
                 <li><a title="Accede a la lista de precios" href="#precios"><b>3.Ir a Precios</b></a></li>
-                <li><a title="Accede a la reserva de tu exposición guiada" href="#reserva"><b>4.Reservar exposición</b></a></li>
-                <li><a title="Accede a las exposiciones del museo" href="#cuadros"><b>5.Nuestros cuadros</b></a></li>
+                <li><a title="Accede a las exposiciones del museo" href="#exposiciones"><b>4.Nuestras exposiciones</b></a></li>
+                <li><a title="Accede a la reserva de tu exposición guiada" href="#reserva"><b>5.Reservar exposición</b></a></li>
                 <li><a title="Accede a la pagina de contacto con la empresa" href="#contacto"><b>6.Contácte con nosotros</b></a>
                 </li>
             </ul>
@@ -115,7 +115,7 @@
                 <div id="cita">
                     <div id="imagecita">
                         <img src="img/pamuk.jpg" alt="pamuk">
-                        <div>
+                        <div class="desc-pamuk">
                             <p>Foto de Orhan Pamuk</p>
                         </div>
                     </div>   
@@ -128,7 +128,7 @@
             </blockquote>
             <div>
             <img src="img/home.jpg" alt="Museo del Prado">
-                <div>
+                <div class="desc-foto">
                     <p>Foto del Museo del Prado 2021. Madrid-España</p>
                 </div>
             </div>
@@ -137,13 +137,16 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6-d2uEjlU-c" title="Video presentación del Museo del Prado" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Video del prado</iframe>
             </div>
             <div class="transcripcion-container">
+                <div class="desc-foto">
+                    <p>Video presentación del Museo del Prado.</p>
+                </div>
                 <p id="transcripcion"></p>
                 <p>
                     <a title="Mostrar la transcripción del video" onclick="transcribir()"><b><span
                   id="transcripcionboton">Mostrar Transcripción</span></b></a>
                 </p>
             </div>
-            <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
+            <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
         </div>
 
         <div id="horario">
@@ -187,7 +190,7 @@
                 </tbody>
             </table>
             <br>
-            <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
+            <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
         </div>
 
         <div id="precios">
@@ -214,7 +217,21 @@
 
             </ul>
             <br>
-            <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
+            <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
+        </div>
+
+        <div id="exposiciones">
+            <h2 class="center"><span>5. </span>Nuestras exposiciones</h2>
+            <p>Este es un recorrido en el que encontrarás algunas exposiciones que te permitirán <b>disfrutar</b> del arte de la pintura. </p>
+            <p>Especialmente apto para ir con niños y niñas, cada cuadro ha sido elegido para dar a conocer quince pintores y una pintora fundamentales en la historia del arte. Ante ellos podrás recrearte en una actividad tan gratificante como es la
+                <b>contemplación</b>.</p>
+            <p>Son pinturas elegidas por su <b>riqueza de detalles</b>, por su <b>pluralidad de géneros</b>, por su
+                <b>representatividad de estilos</b>, por su <b>excelencia</b> y por su <b>vocación inclusiva</b>.
+            </p>
+            <p>En el siguiente <b>enlace</b>, podrá ver las exposiciones. <b>Disfrute de ellos. </b>
+            <div class="enlace"> <a title="Ver las exposiciones" href="exposiciones.html"><b>Ver las exposiciones</b></a></div>
+            <br>
+            <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
         </div>
 
         <div id="reserva">
@@ -227,25 +244,25 @@
                     <p>
                         <label for="nombre"><b>Nombre:</b><span class="reqField">*</span><span class="element-invisible"
                   id="nombreErrorHidden"></span></label><br />
-                        <input title="Escriba su nombre" id="nombre" type="text" name="textfield" aria-required="true" />
+                        <input title="Escriba su nombre" id="nombre" type="text" name="textfield" placeholder="Escriba su nombre" aria-required="true" />
                         <span class="errorMsg" id="nombreError"></span>
                     </p>
                     <p><label for="apellidos"><b>Apellidos:</b><span class="reqField">*</span><span class="element-invisible"
                   id="apellidosErrorHidden"></span></label><br />
-                        <input title="Escriba sus apellidos" id="apellidos" type="text" name="textfield" aria-required="true" />
+                        <input title="Escriba sus apellidos" id="apellidos" type="text" name="textfield" placeholder="Escriba sus apellidos"  aria-required="true" />
 
                         <span class="errorMsg" id="apellidosError"></span>
 
                     </p>
                     <p><label for="email"><b>Email:</b><span class="reqField">*</span><span class="element-invisible"
                   id="emailErrorHidden"></span></label><br />
-                        <input id="email" title="Escriba su email" type="email" name="textfield" aria-required="true" />
+                        <input id="email" title="Escriba su email" type="email" name="textfield" placeholder="Escriba su email"  aria-required="true" />
 
                         <span class="errorMsg" id="emailError"></span>
 
                     </p>
                     <div><label for="discapacidad"><b>Escriba su discapacidad</b></label><br />
-                        <input title="¿Tiene alguna discapacidad?" id="discapacidad" type="text" name="discapacidad" aria-describedby="sample-tip" />
+                        <input title="¿Tiene alguna discapacidad?" id="discapacidad" type="text" name="discapacidad" placeholder="Escriba su discapacidad"  aria-describedby="sample-tip" />
                         <div role="tooltip" id="discapacidad" aria-required="true">Ayuda: discapacidad auditiva, visual, cognitiva, motora ...</div>
                         <div>Le ayudaremos a seguir su exposición.</div>
                     </div>
@@ -318,29 +335,17 @@
                 </form>
             </div>
             </p>
-            <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
+            <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
         </div>
-        <div id="cuadros">
-            <h2 class="center"><span>5. </span>Nuestros cuadros</h2>
-            <p>Este es un recorrido en el que encontrarás los 16 cuadros que te permitirán <b>disfrutar</b> del arte de la pintura. </p>
-            <p>Especialmente apto para ir con niños y niñas, cada cuadro ha sido elegido para dar a conocer quince pintores y una pintora fundamentales en la historia del arte. Ante ellos podrás recrearte en una actividad tan gratificante como es la
-                <b>contemplación</b>.</p>
-            <p>Son pinturas elegidas por su <b>riqueza de detalles</b>, por su <b>pluralidad de géneros</b>, por su
-                <b>representatividad de estilos</b>, por su <b>excelencia</b> y por su <b>vocación inclusiva</b>.
-            </p>
-            <p>En el siguiente <b>enlace</b>, podrá ver estos 16 cuadros. <b>Disfrute de ellos. </b><a title="Ver los cuadros" href="exposiciones.html">Ver los cuadros</a></p>
 
-            <br>
-            <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
-        </div>
         <div id="contacto">
             <h2 class="center"><span>6. </span>Póngase en contácto con nosotros</h2>
             <ul>
                 <p>Queremos que el <b>Museo del Prado</b> sea <b>para todos</b> y ofrecer la <b>mejor experencia</b> para nuestro público.</p>
                 <p>Por favor, para cualquier <b>duda</b> o <b>aclaración</b>, no dude en contactar con nosotros a través del siguiente enlace:</p>
-                <p> <a title="Contactar con el Museo del Prado" href="aboutUs.html">Contactar con el museo</a></p>
+                <div class="enlace"> <a title="Contactar con el Museo del Prado" href="aboutUs.html"><b>Contactar con el museo</b></a></div>
                 <br>
-                <a class="volver" title="Volver al menú" href="#menu"><b>Volver al menú</b></a>
+                <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
         </div>
     </div>
 </body>
