--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <div class="desc-foto">
                     <p>Video presentación del Museo del Prado.</p>
                 </div>
+                <div id="audio"></div>
                 <p id="transcripcion"></p>
                 <p>
                     <a title="Mostrar la transcripción del video" onclick="transcribir()"><b><span
