Contacte con nosotros

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -105,9 +105,10 @@
         <div class="messege_area">
             <div class="container" id="aboutus-content">
                 <div class="about1">
+                <img src="img/contact_us_img.jpg" alt="Contacte con nosotros" longdesc="Icono para contactar con nosotros">
                 <img src="img/about-us.png" alt="Imagen del Museo del Prado" longdesc="Es el edificio del Museo">
                 </div>
-                <div class="about1">
+                <div class="about1" id="ab2">
                     <div>
                         <h3>Envía tu mensaje</h3>
                         <div class="seperator"></div>
