--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     <br>
                     <div class="form-botones">
                         <input title="Enviar el formulario" type="submit" name="submit" class="submit" value="Enviar formulario" />
-                        <input title="Reiniciar campos del formulario" type="reset" name="reset" class="submit" value="Reiniciar formulario" />
+                        <input title="Reiniciar campos del formulario" type="reset" name="reset" id="resetForm" class="submit" value="Reiniciar formulario" />
                     </div>
                 </form>
             </div>
