--- a/aboutUs.html
+++ b/aboutUs.html
@@ -98,7 +98,7 @@
 
         <nav>
             <h2 id="menu" class="center">Menú - Contacto</h2>
-            <ul class="menu">
+            <ul class="menu" role="menu">
                 <li><a title="Accede al formulario de contacto" href="#contacto"><b>1.Contacta con nosotros</b></a></li>
                 <li><a title="Accede a la localización del museo" href="#localizacion"><b>2.Nuestra localización</b></a></li>
             </ul>
