--- a/exposiciones.html
+++ b/exposiciones.html
@@ -98,7 +98,7 @@
         </div>
 
         <nav>
-            <h2 id="menu" class="center">Menú - Exposiciones</h2>
+            <h2 id="menu" class="center" role="menu">Menú - Exposiciones</h2>
             <ul class="menu">
                 <li><a title="Accede a la exposición: Pasiones Mitológicas" href="#PasionesMitologicas"><b>1.Pasiones Mitológicas</b></a></li>
                 <li><a title="Accede a la exposición: El Greco en Illescas" href="#greco"><b>2.El Greco en Illescas</b></a></li>
