--- a/exposiciones.html
+++ b/exposiciones.html
@@ -88,18 +88,18 @@
     <!-- Accessibility Helper Panel - End -->
     <script src="js/index.js"></script>
     <div id="content-wrapper">
-        <div class="navegacion">
+        <div role="navigation" class="navegacion">
             <div id="block1">
                 <b>Navegación:</b> <a title="Volver a inicio" href="index.html#exposiciones" class="navtext">Volver a Inicio</a> / <a title="Ir a Exposiciones" href="#exposiciones" class="navtext">Exposiciones</a>
             </div>
-            <div id="block2">
+            <div role="banner" id="block2">
                 <h1 class="title">Museo del prado</h1>
             </div>
         </div>
 
         <nav>
-            <h2 id="menu" class="center" role="menu">Menú - Exposiciones</h2>
-            <ul class="menu">
+            <h2 id="menu" class="center" >Menú - Exposiciones</h2>
+            <ul class="menu" role="menu">
                 <li><a title="Accede a la exposición: Pasiones Mitológicas" href="#PasionesMitologicas"><b>1.Pasiones Mitológicas</b></a></li>
                 <li><a title="Accede a la exposición: El Greco en Illescas" href="#greco"><b>2.El Greco en Illescas</b></a></li>
                 <li><a title="Accede a la exposición: Los Dioses del Prado" href="#dioses"><b>3.Los Dioses del Prado</b></a></li>
