--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <script src="js/index.js"></script>
     <div id="content-wrapper">
         <div class="navegacion">
-            <div id="block1">
+            <div role="navigation" id="block1">
                 <b>Navegación:</b> <a title="Ir a inicio" href="#inicio" class="navtext">Inicio</a>
             </div>
-            <div id="block2">
+            <div role="banner" id="block2">
                 <h1 class="title">Museo del prado</h1>
             </div>
         </div>
@@ -103,15 +103,14 @@
                 <li><a title="Accede a la lista de precios" href="#precios"><b>3.Ir a Precios</b></a></li>
                 <li><a title="Accede a las exposiciones del museo" href="#exposiciones"><b>4.Nuestras exposiciones</b></a></li>
                 <li><a title="Accede a la reserva de tu exposición guiada" href="#reserva"><b>5.Reservar exposición</b></a></li>
-                <li><a title="Accede a la pagina de contacto con la empresa" href="#contacto"><b>6.Contácte con nosotros</b></a>
-                </li>
+                <li><a title="Accede a la pagina de contacto con la empresa" href="#contacto"><b>6.Contácte con nosotros</b></a></li>
             </ul>
         </nav>
 
         <!--content-->
         <div id="presentacion">
             <h2 class="center"><span>1. </span>Presentación</h2>
-            <blockquote cite="https://akifrases.com/frase/195934#:~:text=Frase%20de%20Orhan%20Pamuk,tiempo%20se%20transforma%20en%20espacio.%E2%80%9D&text=%E2%80%9CEl%20amor%20es%20el%20anhelo,el%20mismo%20lugar%20que%20ella.&text=Biografia%3A%20Ferit%20Orhan%20Pamuk%20es,Premio%20Nobel%20de%20Literatura%202006.">
+            <blockquote lang="es" cite="https://akifrases.com/frase/195934#:~:text=Frase%20de%20Orhan%20Pamuk,tiempo%20se%20transforma%20en%20espacio.%E2%80%9D&text=%E2%80%9CEl%20amor%20es%20el%20anhelo,el%20mismo%20lugar%20que%20ella.&text=Biografia%3A%20Ferit%20Orhan%20Pamuk%20es,Premio%20Nobel%20de%20Literatura%202006.">
                 <div id="cita">
                     <div id="imagecita">
                         <img id="indexImg1" src="img/pamuk.jpg" alt="Foto de Orhan Pamuk">
@@ -119,9 +118,9 @@
                             <p>Foto de Orhan Pamuk</p>
                         </div>
                     </div>
-                    <div id="textcita">
+                    <div lang="es" id="textcita">
                         <p>“Los museos de verdad son los sitios en los que el tiempo se transforma en espacio.”</p>
-                        <p><b>― Orhan Pamuk</b></p>
+                        <p><b>― Orhan Pamuk <i>(Orjan Pamuk)</i></b></p>
                     </div>
 
                 </div>
@@ -190,7 +189,7 @@
                     </tr>
                 </tbody>
             </table>
-            <br>
+            <p>Ayuda abreviatura. h - horas</p>
             <a class="volver" title="Volver al menú" href="#inicio"><b>Volver al menú</b></a>
         </div>
 
@@ -240,24 +239,24 @@
             <div id="content-form">
 
                 <h3>Rellena el formulario</h3>
-                <form action="#" name="myForm" id="form" onsubmit="return validateForm()" method="get">
-                    <p>Los campos obligatorios se indican con un <span class="reqField">*</span>.</p>
+                <form role="form" action="#" name="myForm" id="form" onsubmit="return validateForm()" method="get">
+                    <p>Los campos obligatorios se indican con un <span class="reqField">*</span>. La corrección del error se muestrará en color naranja.</p>
                     <p>
                         <label for="nombre"><b>Nombre:</b><span class="reqField">*</span><span class="element-invisible"
                   id="nombreErrorHidden"></span></label><br />
-                        <input title="Escriba su nombre" id="nombre" type="text" name="textfield" placeholder="Escriba su nombre" />
+                        <input title="Escriba su nombre" id="nombre" type="text" name="textfield" placeholder="Escriba su nombre" aria-required = "true" />
                         <span class="errorMsg" id="nombreError"></span>
                     </p>
                     <p><label for="apellidos"><b>Apellidos:</b><span class="reqField">*</span><span class="element-invisible"
                   id="apellidosErrorHidden"></span></label><br />
-                        <input title="Escriba sus apellidos" id="apellidos" type="text" name="textfield" placeholder="Escriba sus apellidos" />
+                        <input title="Escriba sus apellidos" id="apellidos" type="text" name="textfield" placeholder="Escriba sus apellidos" aria-required = "true" />
 
                         <span class="errorMsg" id="apellidosError"></span>
 
                     </p>
                     <p><label for="email"><b>Email:</b><span class="reqField">*</span><span class="element-invisible"
                   id="emailErrorHidden"></span></label><br />
-                        <input id="email" title="Escriba su email" type="email" name="textfield" placeholder="Escriba su email" />
+                        <input id="email" title="Escriba su email" type="email" name="textfield" placeholder="Escriba su email" aria-required = "true" />
 
                         <span class="errorMsg" id="emailError"></span>
 
@@ -267,18 +266,20 @@
                         <div role="tooltip" id="discapacidad-tip">Ayuda: discapacidad auditiva, visual, cognitiva, motora ...</div>
                         <div>Le ayudaremos a seguir su exposición.</div>
                     </div>
+                    <br>
                     <div><label for="fecha"><b>Fecha de asistencia</b><span class="reqField">*</span><span class="errorMsg"
                   id="fechaErrorHidden"></span></label><br />
-                        <input title="Escriba la fecha de asistencia. Día(2 digitos)/Mes(2 digitos)/Año(4 digitos)" type="date" id="fecha" onchange="cambiarFecha();" class="picker" aria-describedby="fecha-tip">
+                        <input title="Escriba la fecha de asistencia. Día(2 digitos)/Mes(2 digitos)/Año(4 digitos)" type="date" id="fecha" onchange="cambiarFecha();" class="picker" aria-describedby="fecha-tip" aria-required = "true">
                         <div role="tooltip" id="fecha-tip">Ayuda: por ejemplo, 20/08/2021</div>
                         <span class="fechaMsg" id="fechaError"></span>
                         <div class="result"></div>
                     </div>
+                    <br>
                     <fieldset>
                         <legend id="turnoLegend"><b>Elige tu turno:</b><span class="reqField">*</span><span class="errorMsg" id="turnoLegendError"></span></legend>
                         <input id="mañana" type="radio" name="turno" value="Mañana" checked />
                         <label for="mañana">Mañana</label><br>
-                        <input id="tarde" type="radio" name="turno" value="Tarde">
+                        <input id="tarde" type="radio" name="turno" value="Tarde" >
                         <label for="tarde">Tarde</label><br>
                     </fieldset>
                     <fieldset>
@@ -315,7 +316,7 @@
                         </ul>
 
                         <p id="precio"></p>
-                        <p id="success"></p>
+                        <p role="status" id="success"></p>
                     </div>
 
                     <br>
